--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -13,6 +13,7 @@ Year 2023
 23.1.0	Upgraded to work with the new version of the framework.
 23.1.1  Getting started on the project with Acme-One configuration.
 23.1.2  Configured as Acme-L3-D01 for the first delivery. 
+23.1.3  Added the D01 reports and prepared for release.
 
 Year 2022
 
